--- a/style.css
+++ b/style.css
@@ -85,8 +85,6 @@ span.landing-text {
     z-index: 1;
 }
 
-
-
 @media screen and (max-width: 400px) {
     .landing-text {
         font-size: 50px;
@@ -98,6 +96,13 @@ span.landing-text {
         opacity: 0;
     }
 }
+
+/* ------------- MAIN -------------- */
+
+/* main {
+    background-color: rgb(197, 162, 233);
+    z-index: 4;
+} */
 
 /* ------------ NAV BAR ------------ */
 
