--- a/styleEye.css
+++ b/styleEye.css
@@ -76,6 +76,21 @@ body {
     }
 }
 
+@keyframes eye-close-animation {
+
+    0% {
+        height: 0%;
+    }
+
+    50% {
+        height: 10%;
+    }
+
+    100% {
+        height: 100%;
+    }
+}
+
 .eye {
     background: rgb(233, 225, 225);
     height: var(--eye-size);
