--- a/obsolete/styleEye.css
+++ b/obsolete/styleEye.css
@@ -10,19 +10,20 @@
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-body {
+/* body {
     background-color: black;
     font-family: 'Roboto Condensed';
     margin: 0px;
     padding: 0px;
     display: flex;
     flex-direction: column;
-}
+} */
 
 .eye-wrap {
     height: var(--eye-size);
     width: var(--eye-size);
-    position: absolute;
+    max-width: 100%;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -32,7 +33,7 @@ body {
 
 .eyelid {
     width: calc(var(--eye-size) * 3 / 2);
-    height: calc(var(--eye-size) * 5/ 5);
+    height: calc(var(--eye-size) * 5 / 5);
     top: 50%;
     left: 50%;
     position: absolute;
@@ -49,17 +50,6 @@ body {
     z-index: inherit;
     transition: 0.4s all;
 }
-
-/* #eyelid span {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    border-radius: 0 0 60% 60%;
-    z-index: inherit;
-    transition: 0.4s all;
-} */
-
 
 @keyframes eye-open-animation {
 
@@ -95,6 +85,7 @@ body {
     background: rgb(233, 225, 225);
     height: var(--eye-size);
     width: var(--eye-size);
+    max-width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -141,4 +132,10 @@ body {
 .iris4 {
     width: calc(var(--eye-size));
     height: calc(var(--eye-size));
+}
+
+@media screen and (max-width: 400px) {
+    :root {
+        --eye-size: 200px;
+    }
 }
