--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ span.landing-text {
     .landing-text {
         font-size: 50px;
         text-align: center;
+        background: radial-gradient(400px circle at 0 0, rgba(255, 255, 255, 0.25), transparent 80%);
     }
 
     .spotlight:hover::before {
@@ -159,6 +160,7 @@ main {
 
 
 /* ---------------- EYE --------------- */
+
 .eye-wrap {
     height: var(--eye-size);
     width: var(--eye-size);
@@ -291,3 +293,19 @@ main {
         --eye-size: 250px;
     }
 }
+
+
+/* ---------------- MOUTh ------------------ */
+/* 
+.mouth-wrap {
+    aspect-ratio: 900/600;
+    width: 100vw;
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('./assets/layered-peaks-haikei.svg');
+    z-index: -1;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+} */
