--- a/test/style2.css
+++ b/test/style2.css
@@ -1,79 +1,157 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@500&family=Roboto+Condensed&display=swap');
 
-:root {
-    --bg-color: rgb(23, 23, 23);
-    --text-color: rgb(192, 198, 211);
-    --body-text-color: rgba(255, 255, 255, 0.92);
-    --light-red: rgb(83, 69, 69);
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
+body {
+    background-color: #181818;
 }
 
-* {
-    word-wrap: break-word;
-    border-color: red;
-    border-width: 0;
-    border-style: solid;
+.book {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 18.5rem;
+    height: 12.5rem;
+    perspective: 70rem;
+}
+
+.cover {
+    background-color: #36354e;
+    transform: rotateY(0deg);
+    width: 9.25rem;
+    height: 12.5rem;
+}
+
+.page {
+    top: 0.25rem;
+    left: 0.25rem;
+    background-color: #e9e6c4;
+    transform: rotateY(0deg);
+    width: 9rem;
+    height: 12rem;
+    text-align: right;
+    font-size: 8px;
+    color: #777;
+    font-family: monospace;
+}
+
+.page::before,
+.page::after {
+    display: block;
+    border-top: 1px dashed rgba(0, 0, 0, 0.3);
+    content: "";
+    padding-bottom: 1rem;
+}
+
+.cover,
+.page {
+    position: absolute;
+    padding: 1rem;
+    transform-origin: 100% 0;
+    border-radius: 5px 0 0 5px;
+    box-shadow: inset 3px 0px 20px rgba(0, 0, 0, 0.2),
+        0px 0px 15px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
 }
 
-body {
-    background-color: #202023;
-    transition-property: background-color;
-    line-height: 1.5rem;
-    font-family: 'Roboto Condensed';
-    margin: 0px;
-    padding: 0px;
-    display: block;
-    flex-direction: column;
-    position: relative;
-    min-height: 100%;
-    color: var(--body-text-color);
+.cover.turn {
+    /* animation: bookCover 3s forwards; */
 }
 
-.container {
-    width: 100%;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    max-width: 786px;
-    padding-inline-start: 1rem;
-    padding-inline-end: 1rem;
-    display: flex;
-    padding: 0.5rem;
-    text-align: center;
+.page.turn {
+    /* animation: bookOpen 3s forwards; */
 }
 
-main {
-    padding-bottom: 8rem;
-    display: block;
+.page:nth-of-type(1) {
+    animation-delay: 0.05s;
 }
 
-.navbar {
-    position: fixed;
-    width: 100%;
-    background: #20202380;
-    z-index: 2;
-    backdrop-filter: blur(10px);
-    display: block;
+.page:nth-of-type(2) {
+    animation-delay: 0.33s
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    -webkit-box-align: center;
-    margin-right: 1.25rem;
+.page:nth-of-type(3) {
+    animation-delay: 0.66s;
 }
 
-.logo-text {
-    font-family: 'M PLUS Rounded 1c';
-    line-height: 1.2;
-
+.page:nth-of-type(4) {
+    animation: bookOpen150deg 3s forwards;
+    animation-delay: 0.99s;
 }
 
-@media screen and (min-width: 48rem) {
-    .logo-text {
-        font-family: 'M PLUS Rounded 1c';
-        line-height: 1.2;
+.page:nth-of-type(5) {
+    animation: bookOpen30deg 3s forwards;
+    animation-delay: 1.2s;
+}
+
+.page:nth-of-type(6) {
+    animation: bookOpen55deg 3s forwards;
+    animation-delay: 1.25s;
+}
+
+@keyframes bookOpen {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(180deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookClose {
+    30% {
+        z-index: 999;
+    }
+
+    100% {
+        transform: rotateY(-180deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookCover {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(180deg);
+        z-index: 1;
+    }
+}
+
+@keyframes bookOpen150deg {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(150deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookOpen55deg {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(55deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookOpen30deg {
+    50% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(30deg);
+        z-index: 999;
     }
 }
