--- a/test/style3.css
+++ b/test/style3.css
@@ -1,68 +1,146 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@500&family=Roboto+Condensed&display=swap');
 
-* {
+body {
+    background-color: #4F4E68;
+}
+
+.book {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 18.5rem;
+    height: 12.5rem;
+    perspective: 70rem;
+}
+
+.cover {
+    background-color: #36354e;
+    transform: rotateY(0deg);
+    width: 9.25rem;
+    height: 12.5rem;
+}
+
+.page {
+    top: 0.25rem;
+    left: 0.25rem;
+    background-color: #e9e6c4;
+    transform: rotateY(0deg);
+    width: 9rem;
+    height: 12rem;
+    text-align: right;
+    font-size: 8px;
+    color: #777;
+    font-family: monospace;
+}
+
+.page::before,
+.page::after {
+    display: block;
+    border-top: 1px dashed rgba(0, 0, 0, 0.3);
+    content: "";
+    padding-bottom: 1rem;
+}
+
+.cover,
+.page {
+    position: absolute;
+    padding: 1rem;
+    transform-origin: 100% 0;
+    border-radius: 5px 0 0 5px;
+    box-shadow: inset 3px 0px 20px rgba(0, 0, 0, 0.2),
+        0px 0px 15px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(75, 77, 80);
 }
 
-header {
-    display: flex;
-    /* THIS IS WHAT CAUSES EVERYTHING TO BE CENTERED */
-    /* Can be flex-end */
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
+.cover.turn {
+    animation: bookCover 3s forwards;
 }
 
-h1,
-li,
-a,
-button {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
+.page.turn {
+    animation: bookOpen 3s forwards;
 }
 
-header h1 {
-    font-size: 25px;
-    /* This makes the h1 spaced out from the rest */
-    margin-right: auto;
+.page:nth-of-type(1) {
+    animation-delay: 0.05s;
 }
 
-.nav-links {
-    list-style: none;
+.page:nth-of-type(2) {
+    animation-delay: 0.33s
 }
 
-.nav-links li {
-    display: inline-block;
-    padding: 0px 20px;
+.page:nth-of-type(3) {
+    animation-delay: 0.66s;
 }
 
-.nav-links li a {
-    transition: all 0.3s ease 0s;
+.page:nth-of-type(4) {
+    animation: bookOpen150deg 3s forwards;
+    animation-delay: 0.99s;
 }
 
-.nav-links li a:hover {
-    color: #0088a9;
+.page:nth-of-type(5) {
+    animation: bookOpen30deg 3s forwards;
+    animation-delay: 1.2s;
 }
 
-button {
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+.page:nth-of-type(6) {
+    animation: bookOpen55deg 3s forwards;
+    animation-delay: 1.25s;
 }
 
-button:hover {
-    background-color: rgba(0, 136, 169, 0.7);
+@keyframes bookOpen {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(180deg);
+        z-index: 999;
+    }
 }
 
-header button {
-    margin-left: 3rem;
+@keyframes bookCover {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(180deg);
+        z-index: 1;
+    }
+}
+
+@keyframes bookOpen150deg {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(150deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookOpen55deg {
+    30% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(55deg);
+        z-index: 999;
+    }
+}
+
+@keyframes bookOpen30deg {
+    50% {
+        z-index: 999
+    }
+
+    100% {
+        transform: rotateY(30deg);
+        z-index: 999;
+    }
 }
