--- a/style.css
+++ b/style.css
@@ -472,6 +472,17 @@ main {
 }
 
 
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    padding: 5vw 5vh;
+}
+
+
 /* ------------ FOOTER -------------- */
 
 footer {
