--- a/style.css
+++ b/style.css
@@ -101,8 +101,31 @@ body {
 
     opacity: 0;
     transition: width 700ms ease, height 700ms ease, opacity 500ms;
-
     z-index: 1;
+}
+
+@media screen and (max-width: 600px) {
+
+    span.landing {
+        padding: 2rem;
+    }
+
+    .landing-text {
+        letter-spacing: 1vw;
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    .landing-text {
+        font-size: 50px;
+        text-align: center;
+        background: radial-gradient(400px circle at 0 0, rgba(255, 255, 255, 0.25), transparent 80%);
+    }
+
+    .spotlight:hover::before {
+        opacity: 0;
+    }
 }
 
 /* ----- EYE ------ */
