--- a/style.css
+++ b/style.css
@@ -276,28 +276,11 @@ body {
     }
 }
 
-
-/* ---------------- MOUTh ------------------ */
-/* 
-.mouth-wrap {
-    aspect-ratio: 900/600;
-    width: 100vw;
-    background-repeat: repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url('./assets/layered-peaks-haikei.svg');
-    z-index: -1;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-} */
-
-
 /* ------ NAV ------ */
 
 header {
     backdrop-filter: blur(15px);
-    /* box-shadow: 0px 5px 5px var(--bg-color-nav); */
+    -webkit-backdrop-filter: blur(15px);
     background-color: var(--bg-color-nav);
     color: var(--text-color);
     padding: 3vh 5vw;
